Added HW3 UI can send file to back with using netty framework.